--- a/m2/public/index.html
+++ b/m2/public/index.html
@@ -6,6 +6,21 @@
     <title>App</title>
   </head>
   <body>
+    <script>
+      if ("geolocation" in navigator) {
+        console.log("Geo Location Available");
+
+        navigator.geolocation.getCurrentPosition((position) => {
+          document.getElementById('latitude').textContent = position.coords.latitude
+          document.getElementById('longitude').textContent = position.coords.longitude
+        });
+
+      } else {
+        console.log("Geo Location Not Available");
+      }
+    </script>
     <h2>Welcome to App</h2>
+    <p>Latitude: <span id="latitude"></span>&deg;</p>
+    <p>Longitude: <span id="longitude"></span>&deg;</p>
   </body>
 </html>
